--- a/help.html
+++ b/help.html
@@ -19,7 +19,7 @@
                             </a>
                         </div>
                         <div class="">
-                            <a href="login.html">
+                            <a href="index.html">
                             <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-red-600">
                                 Logout
                             </button></a>
