--- a/register.html
+++ b/register.html
@@ -67,7 +67,7 @@
                     <textarea class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="certifications" placeholder="Please list any first aid or other certifications you have"></textarea>
                 </div>
                 <div class="flex items-center justify-between">
-                    <a href="login.html" class="w-full">
+                    <a href="index.html" class="w-full">
                     <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded w-full focus:outline-none focus:shadow-outline" type="button">
                         Register
                     </button>
