--- a/safezones.html
+++ b/safezones.html
@@ -13,12 +13,20 @@
 <body class="font-roboto bg-gray-100">
     <nav class="bg-white shadow-lg">
         <div class="max-w-7xl mx-auto px-4">
-            <div class="flex justify-between">
-                <div class="flex space-x-4">
-                    <div>
-                        <a href="#" class="flex items-center py-5 px-2 text-gray-700">
-                            <span class="font-bold text-xl">SaskAssist</span>
-                        </a>
+            <div class="">
+                <div class="">
+                    <div class="flex justify-between items-center space-x-4">
+                        <div>
+                            <a href="#" class="flex items-center py-5 px-2 text-gray-700">
+                                <span class="font-bold text-xl">SaskAssist</span>
+                            </a>
+                        </div>
+                        <div class="">
+                            <a href="index.html">
+                            <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-red-600">
+                                Logout
+                            </button></a>
+                        </div>
                     </div>
                 </div>
             </div>
